Finish the menu

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,55 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__top">
+            <div class="container header__top-inner">
+                <nav class="menu">
+                    <input class="menu__input" name="menu" id="menuInput" type="checkbox">
+                    <label class="menu__open" for="menuInput">
+                        <p class="menu__btn-open">
+                            <span class="menu__open-span"></span>
+                            <span class="menu__open-span"></span>
+                            <span class="menu__open-span"></span>
+                        </p>
+                        Меню
+                    </label>
+                    <ul class="menu__list">
+                        <li class="menu__item menu__item--active">
+                            <a href="#" class="menu__link">Каталог</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">О компании</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Оплата и доставка</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Гарантии и возврат</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Сотрудничество</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Услуги</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Решения</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Техподдержка</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Контакты</a>
+                        </li>
+                        <li class="menu__close-btn">
+                            <span class="menu__span"></span>
+                            <span class="menu__span"></span>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
