Finish the header-middle

--- a/src/template.html
+++ b/src/template.html
@@ -56,6 +56,57 @@
                 </nav>
             </div>
         </div>
+        <div class="header__middle">
+            <div class="container header__middle-grid">
+                <section class="region">
+                    Ваш регион: <a class="region__city" href="#">Москва</a>
+                </section>
+                <section class="profile">
+                    <a href="#" class="profile__login">Войти</a>
+                    <a href="#" class="profile__accaunt">Личный кабинет</a>
+                </section>
+                <section class="logo">
+                    <img class="logo__img" src="./images/logo.png" width="196" height="46" alt="">
+                    <p class="logo__text">Оборудование и решения для VoIP</p>
+                </section>
+                <section class="contacts">
+                    <a href="tel:+74952554466" class="contacts__callback">+7 495 2-55-44-66</a>
+                    <p class="contacts__schedule">(пн-пт с 9 до 18 ч)</p>
+                    <b class="contacts__tel-message">
+                        <span class="contacts__messanger icon icon-whatsapp"></span>
+                        <span class="contacts__messanger icon icon-viber"></span>
+                        +7 903 111-11-11
+                    </b>
+                    <a class="contacts__email" href="mailto:info@homy.ru">info@homy.ru</a>
+                </section>
+                <section class="search icon icon-rub">
+                    <button class="search__btn icon icon-search"></button>
+                    <p class="search__text">
+                        <span class="search__text--orange">VoIP решения</span>
+                        <span class="search__text--black">для экономных людей</span>
+                    </p>
+                    <form action="script.php" method="GET" class="search__form">
+                        <input class="search__input" type="text" placeholder="Поиск по сайту">
+                        <button class="search__send-btn">Искать</button>
+                    </form>
+                </section>
+                <section class="cart">
+                    <div class="cart__box icon icon-cart">
+                        <h5 class="cart__title">Корзина</h5>
+                        <p class="cart__info">
+                            <a class="cart__count">4</a> <span class="cart__slash">/</span>
+                            <span class="cart__sum">4000</span>
+                        </p>
+                    </div>
+                    <a class="cart__favorite icon icon-heart" href="#">Избранное:
+                        <span  class="cart__favorite-count">7</span>
+                    </a>
+                    <a class="cart__comparison icon icon-sync" href="#">Сравнение:
+                        <span class="cart__favorite-count">2</span>
+                    </a>
+                </section>
+            </div>
+        </div>
     </header>
 </body>
 </html>
