Finish header-bottom

--- a/src/template.html
+++ b/src/template.html
@@ -107,6 +107,81 @@
                 </section>
             </div>
         </div>
+        <div class="header__bottom">
+            <div class="container">
+                <div class="header__bottom-box">
+                    <div class="header-bottom__swiper-container swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="header-bottom__swiper-item swiper-slide">
+                              <a href="#" class="swiper__link">VOIP ОБОРУДОВАНИЕ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">SKYPE ОБОРУДОВАНИЕ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">GSM ОБОРУДОВАНИЕ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">ВИДЕО ОБОРУДОВАНИЕ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">РАДИО И DECT ТЕЛЕФОНЫ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">ГАРНИТУРЫ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">ЭЛЕКТРОННЫЕ ЗАМКИ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">ДОМОФОННЫЕ СИСТЕМЫ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">СИСТЕМЫ ЗАПИСИ</a>
+                            </div>
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">СЕТЕВОЕ ОБОРУДОВАНИЕ</a>
+                            </div>
+
+
+                            <div class="header-bottom__swiper-item swiper-slide">
+                                <a href="#" class="swiper__link">VOIP ОБОРУДОВАНИЕ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">SKYPE ОБОРУДОВАНИЕ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">GSM ОБОРУДОВАНИЕ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">ВИДЕО ОБОРУДОВАНИЕ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">РАДИО И DECT ТЕЛЕФОНЫ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">ГАРНИТУРЫ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">ЭЛЕКТРОННЫЕ ЗАМКИ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">ДОМОФОННЫЕ СИСТЕМЫ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">СИСТЕМЫ ЗАПИСИ</a>
+                              </div>
+                              <div class="header-bottom__swiper-item swiper-slide">
+                                  <a href="#" class="swiper__link">СЕТЕВОЕ ОБОРУДОВАНИЕ</a>
+                              </div>
+                        </div>
+                    </div>
+                    <div class="header-bottom__prev swiper-button-prev">
+                    </div>
+                    <div class="header-bottom__next swiper-button-next"></div>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
