Finish product sections

--- a/src/template.html
+++ b/src/template.html
@@ -292,9 +292,192 @@
 
         <section class="products-section">
             <div class="container">
-                <div class="section-title">
-                    <h2 class="section-title__name">Новинки</h2>
-                    <a href="#" class="section-title__link">Все новинки</a>
+                <div class="product-section__grid">
+                    <h2 class="products-section__title">Новинки</h2>
+                    <div class="product-section__line"></div>
+                    <a href="#" class="products-section__all">Все новинки</a>
+                    <div class="products-section__prev swiper-button-prev"></div>
+                    <div class="products-section__next swiper-button-next"></div>
+                    <div class="products-section__container">
+                        <ul class="products-section__wrapper swiper-wrapper">
+                            <li class="product product--new swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-1.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--new swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-2.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--new swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-3.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--new swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-4.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="products-section">
+            <div class="container">
+                <div class="product-section__grid">
+                    <h2 class="products-section__title">Рекомендуем</h2>
+                    <div class="product-section__line"></div>
+                    <a href="#" class="products-section__all">Все рекомендации</a>
+                    <div class="products-section__prev swiper-button-prev"></div>
+                    <div class="products-section__next swiper-button-next"></div>
+                    <div class="products-section__container">
+                        <ul class="products-section__wrapper swiper-wrapper">
+                            <li class="product product--recommended swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-4.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--recommended swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-3.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--recommended swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-2.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--recommended swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-1.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="products-section">
+            <div class="container">
+                <div class="product-section__grid">
+                    <h2 class="products-section__title">Распродажа</h2>
+                    <div class="product-section__line"></div>
+                    <a href="#" class="products-section__all">Все товары</a>
+                    <div class="products-section__prev swiper-button-prev"></div>
+                    <div class="products-section__next swiper-button-next"></div>
+                    <div class="products-section__container">
+                        <ul class="products-section__wrapper swiper-wrapper">
+                            <li class="product product--sale swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-1.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--sale swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-2.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--sale swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-3.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                            <li class="product product--sale swiper-slide">
+                                <div class="product__img-box">
+                                    <img src="./images/product-4.png" alt="" class="product__img">
+                                </div>
+                                <a href="#" class="product__link">
+                                    <h4 class="product__title">IP телефон Siemens Gigaset C530A IP</h4>
+                                </a>
+                                <div class="product__price">Цена: <span class="product__price-count">12 300</span><span>р.</span></div>
+                                <div class="product__old-price"><span class="product__old-price-count">15 500</span><span>р.</span></div>
+                                <button class="product__buy-btn">Купить</button>
+                                <a href="#" class="product__link-more">Подробнее</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
