Finish stock section

--- a/src/template.html
+++ b/src/template.html
@@ -481,6 +481,134 @@
                 </div>
             </div>
         </section>
+
+        <section class="products-section">
+            <div class="container">
+                <div class="product-section__grid">
+                    <h2 class="products-section__title">Акции</h2>
+                    <div class="product-section__line"></div>
+                    <a href="#" class="products-section__all">Все акции</a>
+                    <div class="products-section__prev swiper-button-prev"></div>
+                    <div class="products-section__next swiper-button-next"></div>
+                    <div class="products-section__container">
+                        <ul class="products-section__wrapper swiper-wrapper">
+                            <li class="stock swiper-slide">
+                                <a href="#" class="stock__title-link">
+                                    <h4 class="stock__title">Название акции</h4>
+                                </a>
+                                <a href="#" class="stock__img-box">
+                                    <img src="./images/stock-img-1.jpg" alt="" class="stock__img">
+                                </a>
+                                <p class="stock__text">
+                                    Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
+                                </p>
+                                <div class="stock__time-box">
+                                    <div class="stock__time-text">Срок действия:</div>
+                                    <div class="timer">
+                                        <div class="timer__day timer__day-1">0</div>
+                                        <div class="timer__day timer__day-2">0</div>
+                                        <div class="timer__dots timer__dots-1"></div>
+                                        <div class="timer__hour timer__hour-1">0</div>
+                                        <div class="timer__hour timer__hour-2">0</div>
+                                        <div class="timer__dots timer__dots-2"></div>
+                                        <div class="timer__minut timer__minut-1">1</div>
+                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__label-day">дней</div>
+                                        <div class="timer__label-hour">часов</div>
+                                        <div class="timer__label-minut">минут</div>
+                                      </div>
+                                </div>
+                                <a href="#" class="stock__item-link">Подробнее</a>
+                            </li>
+                            <li class="stock swiper-slide">
+                                <a href="#" class="stock__title-link">
+                                    <h4 class="stock__title">Название акции</h4>
+                                </a>
+                                <a href="#" class="stock__img-box">
+                                    <img src="./images/stock-img-2.jpg" alt="" class="stock__img">
+                                </a>
+                                <p class="stock__text">
+                                    Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
+                                </p>
+                                <div class="stock__time-box">
+                                    <div class="stock__time-text">Срок действия:</div>
+                                    <div class="timer">
+                                        <div class="timer__day timer__day-1">0</div>
+                                        <div class="timer__day timer__day-2">0</div>
+                                        <div class="timer__dots timer__dots-1"></div>
+                                        <div class="timer__hour timer__hour-1">0</div>
+                                        <div class="timer__hour timer__hour-2">0</div>
+                                        <div class="timer__dots timer__dots-2"></div>
+                                        <div class="timer__minut timer__minut-1">1</div>
+                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__label-day">дней</div>
+                                        <div class="timer__label-hour">часов</div>
+                                        <div class="timer__label-minut">минут</div>
+                                      </div>
+                                </div>
+                                <a href="#" class="stock__item-link">Подробнее</a>
+                            </li>
+                            <li class="stock swiper-slide">
+                                <a href="#" class="stock__title-link">
+                                    <h4 class="stock__title">Название акции</h4>
+                                </a>
+                                <a href="#" class="stock__img-box">
+                                    <img src="./images/stock-img-3.jpg" alt="" class="stock__img">
+                                </a>
+                                <p class="stock__text">
+                                    Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
+                                </p>
+                                <div class="stock__time-box">
+                                    <div class="stock__time-text">Срок действия:</div>
+                                    <div class="timer">
+                                        <div class="timer__day timer__day-1">0</div>
+                                        <div class="timer__day timer__day-2">0</div>
+                                        <div class="timer__dots timer__dots-1"></div>
+                                        <div class="timer__hour timer__hour-1">0</div>
+                                        <div class="timer__hour timer__hour-2">0</div>
+                                        <div class="timer__dots timer__dots-2"></div>
+                                        <div class="timer__minut timer__minut-1">1</div>
+                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__label-day">дней</div>
+                                        <div class="timer__label-hour">часов</div>
+                                        <div class="timer__label-minut">минут</div>
+                                      </div>
+                                </div>
+                                <a href="#" class="stock__item-link">Подробнее</a>
+                            </li>
+                            <li class="stock swiper-slide">
+                                <a href="#" class="stock__title-link">
+                                    <h4 class="stock__title">Название акции</h4>
+                                </a>
+                                <a href="#" class="stock__img-box">
+                                    <img src="./images/stock-img-4.jpg" alt="" class="stock__img">
+                                </a>
+                                <p class="stock__text">
+                                    Важными преимуществом использования айпи телефона вместо обычного, является на порядок более низкая цена соединения. 
+                                </p>
+                                <div class="stock__time-box">
+                                    <div class="stock__time-text">Срок действия:</div>
+                                    <div class="timer">
+                                        <div class="timer__day timer__day-1">0</div>
+                                        <div class="timer__day timer__day-2">0</div>
+                                        <div class="timer__dots timer__dots-1"></div>
+                                        <div class="timer__hour timer__hour-1">0</div>
+                                        <div class="timer__hour timer__hour-2">0</div>
+                                        <div class="timer__dots timer__dots-2"></div>
+                                        <div class="timer__minut timer__minut-1">1</div>
+                                        <div class="timer__minut timer__minut-2">6</div>
+                                        <div class="timer__label-day">дней</div>
+                                        <div class="timer__label-hour">часов</div>
+                                        <div class="timer__label-minut">минут</div>
+                                      </div>
+                                </div>
+                                <a href="#" class="stock__item-link">Подробнее</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
